# near-sdk-rs

./: Cargo.toml
examples/access-key/: Cargo.toml  README.md  build.sh
examples/access-key/res/: access_key.wasm
examples/access-key/src/: lib.rs
examples/cross-contract-high-level/res/: cross_contract_high_level.wasm
examples/cross-contract-low-level/res/: cross_contract_low_level.wasm
examples/fungible-token/res/: fungible_token.wasm
examples/status-message/res/: status_message.wasm
near-sdk-macros/src/core_impl/code_generator/: impl_item_method_info.rs
near-sdk/src/: promise.rs
near-sdk/src/types/: error.rs  mod.rs
workspaces/: Cargo.toml
workspaces/src/: add_access_key.rs  lib.rs
